--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,3 @@
-cmake_minimum_required(VERSION 3.10)
-project(RayTracing)
 
-set(CMAKE_CXX_STANDARD 17)
-
-include_directories(/usr/local/include)
+add_executable(main main.cpp)
+target_link_libraries(main libimg)
