--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_executable(main main.cpp RayTracer.cpp)
+add_executable(main main.cpp)
 find_package(OpenMP)
 if(OpenMP_CXX_FOUND)
     target_link_libraries(main PUBLIC OpenMP::OpenMP_CXX libimg)
