reinpl aabb hit && omp parralel, now is in normal speed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,18 @@ project(RayTracing)
 
 set(CMAKE_CXX_STANDARD 17)
 
+# if(NOT CMAKE_BUILD_TYPE)
+#   set(CMAKE_BUILD_TYPE Release)
+# endif()
+
+# set(CMAKE_CXX_FLAGS_DEBUG "-g")
+# set(CMAKE_CXX_FLAGS_RELEASE "-O1")
+
+# set(CMAKE_CXX_FLAGS_RELEASE "-O2")
+# set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+
+
+
 include_directories(/usr/local/include)
 
 add_subdirectory(src)
